# nSP3-lib

./: .gitignore  CMakeLists.txt  README.md  params.prm
benchmarks/: biblis.json  c5g7.json  data.json  dummy.json  iaea2d.json  pwr.json  slab1d_het.json
deal.II_AMR/: dof_info.h  dof_info.templates.h  face_setup_internal.h  matrix_free.h  matrix_free.templates.h  task_info.cc  task_info.h
include/: BlockDiagonalPreconditioner.hpp  BlockGSPreconditioner.hpp  CouplingOperator.hpp  CrossSectionManager.hpp  CurrentPostprocessor.hpp  Discretization.hpp  EnergyGroup.hpp  GeometryData.hpp  GlobalTimer.hpp  InverseOperator.hpp  MaterialData.hpp  MultigridPreconditioner.hpp  MultigridWrappers.hpp  NeutronSolver.hpp  SP3Operator.hpp  SecondModeOperator.hpp  SolverParameters.hpp  TransposeWrapper.hpp  ZeroModeOperator.hpp
src/: BlockDiagonalPreconditioner.cpp  BlockGSPreconditioner.cpp  CouplingOperator.cpp  CrossSectionManager.cpp  EnergyGroup.cpp  InverseOperator.cpp  MultigridPreconditioner.cpp  NeutronSolver.cpp  SP3Operator.cpp  SecondModeOperator.cpp  ZeroModeOperator.cpp  main.cpp
